# ChangeLog for dev-python/pysqlcipher
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2014; Harold Naparst <harold@alum.mit.edu> pysqlcipher-2.6.3.1.ebuild:
  Changed LICENSE to Creative Commons Share Alike 3.0

*pysqlcipher-2.6.3.1 (01 Dec 2014)

  01 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  +pysqlcipher-2.6.3.1.ebuild, +metadata.xml:
  Add pysqlcipher-2.6.3.1
