@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Dec 2014; Harold Naparst <harold@alum.mit.edu> pysqlcipher-2.6.3.1.ebuild:
+  Comments about eigenlay overlay being required.
+
   01 Dec 2014; Harold Naparst <harold@alum.mit.edu> pysqlcipher-2.6.3.1.ebuild:
   Changed LICENSE to Creative Commons Share Alike 3.0
 
